--- a/ide/aboutfrm.lfm
+++ b/ide/aboutfrm.lfm
@@ -1,10 +1,9 @@
 object AboutForm: TAboutForm
-  ActiveControl = AboutPage
   Caption = 'About Lazarus'
   ClientHeight = 270
   ClientWidth = 608
   OnCreate = AboutFormCreate
-  PixelsPerInch = 96
+  PixelsPerInch = 81
   Position = poScreenCenter
   HorzScrollBar.Page = 607
   VertScrollBar.Page = 269
@@ -14,33 +13,35 @@ object AboutForm: TAboutForm
   Width = 608
   object VersionLabel: TLabel
     Alignment = taCenter
+    BorderSpacing.OnChange = nil
     Caption = 'Version #:'
     ParentColor = True
     Left = 14
-    Height = 13
+    Height = 12
     Top = 6
-    Width = 50
+    Width = 57
   end
   object BuildDateLabel: TLabel
     Alignment = taCenter
+    BorderSpacing.OnChange = nil
     Caption = 'Date:'
     ParentColor = True
     Left = 14
-    Height = 13
+    Height = 12
     Top = 23
-    Width = 27
+    Width = 29
   end
   object RevisionLabel: TLabel
-    BorderSpacing.OnChange = nil
     Caption = 'RevisionLabel'
     Color = clNone
     Left = 14
-    Height = 13
+    Height = 12
     Top = 40
-    Width = 65
+    Width = 79
   end
   object CloseButton: TBitBtn
     AutoSize = True
+    BorderSpacing.OnChange = nil
     Cancel = True
     Caption = 'Close'
     Glyph.Data = {
@@ -72,12 +73,13 @@ object AboutForm: TAboutForm
     ModalResult = 1
     TabOrder = 1
     Left = 70
-    Height = 36
+    Height = 30
     Top = 225
-    Width = 73
+    Width = 65
   end
   object Notebook1: TNotebook
     Anchors = [akTop, akLeft, akRight, akBottom]
+    BorderSpacing.OnChange = nil
     PageIndex = 0
     Left = 215
     Height = 261
@@ -85,33 +87,38 @@ object AboutForm: TAboutForm
     Width = 389
     object AboutPage: TPage
       Caption = 'About'
-      ClientWidth = 381
-      ClientHeight = 235
-      Height = 235
-      Width = 381
+      ClientWidth = 385
+      ClientHeight = 231
+      Left = 2
+      Height = 231
+      Top = 28
+      Width = 385
       object AboutMemo: TMemo
         Align = alClient
+        BorderSpacing.OnChange = nil
         ReadOnly = True
         ScrollBars = ssAutoBoth
         TabOrder = 0
-        Height = 235
-        Width = 381
+        Height = 231
+        Width = 385
       end
     end
     object ContributorsPage: TPage
       Caption = 'Contributors'
-      ClientWidth = 381
-      ClientHeight = 235
-      Visible = False
-      Height = 235
-      Width = 381
+      ClientWidth = 385
+      ClientHeight = 231
+      Left = 2
+      Height = 231
+      Top = 28
+      Width = 385
       object ContributorsMemo: TMemo
         Align = alClient
+        BorderSpacing.OnChange = nil
         ReadOnly = True
         ScrollBars = ssAutoBoth
         TabOrder = 0
-        Height = 235
-        Width = 381
+        Height = 231
+        Width = 385
       end
     end
   end
