--- a/packager/installpkgsetdlg.lfm
+++ b/packager/installpkgsetdlg.lfm
@@ -1,107 +1,117 @@
 object InstallPkgSetDialog: TInstallPkgSetDialog
+  BorderStyle = bsSizeToolWin
   Caption = 'InstallPkgSetDialog'
-  ClientHeight = 371
+  ClientHeight = 373
   ClientWidth = 529
   OnCreate = InstallPkgSetDialogCreate
   OnDestroy = InstallPkgSetDialogDestroy
   OnResize = InstallPkgSetDialogResize
   PixelsPerInch = 96
   HorzScrollBar.Page = 528
-  VertScrollBar.Page = 370
+  VertScrollBar.Page = 372
   Left = 319
-  Height = 371
+  Height = 373
   Top = 178
   Width = 529
   object InstallPkgGroupBox: TGroupBox
-    Anchors = [akTop, akLeft, akBottom]
     BorderSpacing.OnChange = nil
+    BorderSpacing.Around = 6
     Caption = 'InstallPkgGroupBox'
-    ClientHeight = 285
-    ClientWidth = 236
+    ClientHeight = 307
+    ClientWidth = 251
     ParentColor = True
     TabOrder = 0
-    Left = 16
-    Height = 303
-    Top = 16
-    Width = 240
+    Left = 6
+    Height = 325
+    Top = 6
+    Width = 255
     object InstallListBox: TListBox
-      Align = alTop
-      Anchors = [akTop, akLeft, akRight, akBottom]
+      Align = alClient
       BorderSpacing.OnChange = nil
+      BorderSpacing.Around = 6
       ClickOnSelChange = False
       MultiSelect = True
       OnSelectionChange = InstallListBoxSelectionChange
       TabOrder = 0
-      Height = 184
-      Width = 236
+      Left = 6
+      Height = 202
+      Top = 6
+      Width = 239
     end
     object UninstallButton: TButton
-      Anchors = [akLeft, akRight, akBottom]
+      Align = alBottom
       BorderSpacing.OnChange = nil
+      BorderSpacing.Around = 6
       Caption = 'UninstallButton'
       OnClick = UninstallButtonClick
       TabOrder = 1
       Left = 6
       Height = 25
-      Top = 192
-      Width = 224
+      Top = 214
+      Width = 239
     end
     object ImportButton: TButton
-      Anchors = [akLeft, akRight, akBottom]
+      Align = alBottom
       BorderSpacing.OnChange = nil
+      BorderSpacing.Around = 6
       Caption = 'ImportButton'
       OnClick = ImportButtonClick
       TabOrder = 2
       Left = 6
       Height = 25
-      Top = 224
-      Width = 224
+      Top = 245
+      Width = 239
     end
     object ExportButton: TButton
-      Anchors = [akLeft, akRight, akBottom]
+      Align = alBottom
       BorderSpacing.OnChange = nil
+      BorderSpacing.Around = 6
       Caption = 'ExportButton'
       OnClick = ExportButtonClick
       TabOrder = 3
       Left = 6
       Height = 25
-      Top = 256
-      Width = 224
+      Top = 276
+      Width = 239
     end
   end
   object AvailablePkgGroupBox: TGroupBox
     Anchors = [akTop, akLeft, akBottom]
     BorderSpacing.OnChange = nil
+    BorderSpacing.Around = 6
     Caption = 'AvailablePkgGroupBox'
-    ClientHeight = 285
-    ClientWidth = 236
+    ClientHeight = 307
+    ClientWidth = 251
     ParentColor = True
     TabOrder = 1
-    Left = 272
-    Height = 303
-    Top = 16
-    Width = 240
+    Left = 267
+    Height = 325
+    Top = 6
+    Width = 255
     object AvailableListBox: TListBox
-      Align = alTop
-      Anchors = [akTop, akLeft, akRight, akBottom]
+      Align = alClient
       BorderSpacing.OnChange = nil
+      BorderSpacing.Around = 6
       ClickOnSelChange = False
       MultiSelect = True
       OnSelectionChange = AvailableListBoxSelectionChange
       TabOrder = 0
-      Height = 249
-      Width = 236
+      Left = 6
+      Height = 264
+      Top = 6
+      Width = 239
     end
     object AddToInstallButton: TButton
-      Anchors = [akLeft, akRight, akBottom]
+      Align = alBottom
       BorderSpacing.OnChange = nil
+      BorderSpacing.Around = 6
       Caption = 'AddToInstallButton'
       OnClick = AddToInstallButtonClick
       TabOrder = 1
       Left = 6
       Height = 25
-      Top = 256
-      Width = 224
+      Top = 276
+      Width = 239
     end
   end
   object CancelButton: TButton
@@ -112,33 +122,33 @@ object InstallPkgSetDialog: TInstallPkgSetDialog
     Caption = 'CancelButton'
     ModalResult = 2
     TabOrder = 2
-    Left = 16
-    Height = 22
-    Top = 336
-    Width = 81
+    Left = 6
+    Height = 25
+    Top = 338
+    Width = 84
   end
   object SaveAndRebuildButton: TButton
-    Anchors = [akLeft, akBottom]
+    Anchors = [akBottom]
     AutoSize = True
     BorderSpacing.OnChange = nil
     Caption = 'SaveAndRebuildButton'
     OnClick = InstallButtonClick
     TabOrder = 3
-    Left = 183
-    Height = 22
-    Top = 336
-    Width = 73
+    Left = 199
+    Height = 25
+    Top = 338
+    Width = 130
   end
   object SaveAndExitButton: TButton
-    Anchors = [akLeft, akBottom]
+    Anchors = [akRight, akBottom]
     AutoSize = True
     BorderSpacing.OnChange = nil
     Caption = 'SaveAndExitButton'
     OnClick = SaveAndExitButtonClick
     TabOrder = 4
-    Left = 328
-    Height = 22
-    Top = 336
+    Left = 409
+    Height = 25
+    Top = 338
     Width = 113
   end
 end
